# Social-networksCrowler

./: AbstractAPI.h  Abstract_id_list_generator_strategy.h  CMakeLists.txt  Crowler.cpp  Crowler.h  Curl.h  Facebook_id_list_generator_strategy.cpp  Facebook_id_list_generator_strategy.h  Ok_id_list_generator_strategy.cpp  Ok_id_list_generator_strategy.h  README.md  VkAPI.cpp  VkAPI.h  Vk_id_list_generator_strategy.cpp  Vk_id_list_generator_strategy.h  main.cpp  test_facebook.txt  test_ok.txt
API/: FacebookAPI.cpp  FacebookAPI.h  OkAPI.cpp  OkAPI.h  VkAPI.cpp  VkAPI.h
AbstractClasses/: AbstractAPI.h  Abstract_id_list_generator_strategy.h
Crowler/: Crowler.cpp  Crowler.h
Curl/: Curl.cpp  Curl.h
Google_tests/: API_tests.cpp  CMakeLists.txt
Google_tests/lib/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc
Google_tests/lib/googletest/test/: googletest-output-test_.cc  googletest-param-test-test.cc  googletest-printers-test.cc  gtest-unittest-api_test.cc  gtest_skip_test.cc  gtest_unittest.cc
Id_list_generator_strategy/: Facebook_id_list_generator_strategy.cpp  Facebook_id_list_generator_strategy.h  Ok_id_list_generator_strategy.cpp  Ok_id_list_generator_strategy.h  Ok_id_list_generator_strategy_friends_method.cpp  Ok_id_list_generator_strategy_friends_method.h  Vk_id_list_generator_strategy.cpp  Vk_id_list_generator_strategy.h
NetService/: NetService.cpp  NetService.h
response/: response.cpp  response.h
url/: url.h
