cmake_minimum_required(VERSION 3.15)
project(kursach_final)

set(CMAKE_CXX_STANDARD 17)



add_subdirectory(Google_tests)

add_executable(kursach_final main.cpp Curl.h Curl.cpp AbstractAPI.h API/VkAPI.h API/VkAPI.cpp Abstract_id_list_generator_strategy.h Id_list_generator_strategy/Vk_id_list_generator_strategy.h Id_list_generator_strategy/Vk_id_list_generator_strategy.cpp Crowler.h Crowler.cpp Id_list_generator_strategy/Ok_id_list_generator_strategy.h Id_list_generator_strategy/Ok_id_list_generator_strategy.cpp Id_list_generator_strategy/Facebook_id_list_generator_strategy.h Id_list_generator_strategy/Facebook_id_list_generator_strategy.cpp API/OkAPI.cpp API/OkAPI.h API/FacebookAPI.cpp API/FacebookAPI.h Id_list_generator_strategy/Ok_id_list_generator_strategy_friends_method.cpp Id_list_generator_strategy/Ok_id_list_generator_strategy_friends_method.h)
#target_link_libraries(kursach_final gtest gtest_main)

